--- a/SeSAC3Week6/SeSAC3Week6/Info.plist
+++ b/SeSAC3Week6/SeSAC3Week6/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>사진을 찍기 위해 권한이 필요해요.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>현재 날씨에 대한 정보를 가지고 오기 위해 위치 정보가 필요해요.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
